<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/beverage_title_label"
        />
    <EditText
        android:id = "@+id/beverage_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id = "@+id/id_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id_label"/>
    <EditText
        android:id = "@+id/pack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pack_label"/>
    <EditText
        android:id = "@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price_label"/>
    <CheckBox
        android:id = "@+id/active"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/active_label"/>

</LinearLayout>